# g-engine

./: C++答辩.pptx  README.md
back/: CMakeLists.txt  Dockerfile  README.md  a.out  main.cpp
back/include/: BarnesHutSimulator.hpp  CelestialBody.hpp  Config.hpp  ISimulator.hpp  NewtonianSimulator.hpp  OctreeNode.hpp  Vector3D.hpp
back/src/: BarnesHutSimulator.cpp  NewtonianSimulator.cpp  OctreeNode.cpp
front/: package-lock.json  package.json  vue.config.js
front/src/: App.vue  main.js
testcases/: conflict.json  solar-system.json
